fix bug on mobile feed screen

--- a/src/components/Feeds.css
+++ b/src/components/Feeds.css
@@ -5,6 +5,8 @@
   align-items: center;
   justify-content: center;
   font-family: "Ubuntu", sans-serif;
+  height: 40vh;
+  overflow: scroll;
 }
 
 .feeds {
